--- a/war/style.css
+++ b/war/style.css
@@ -149,6 +149,11 @@ li
 	border-bottom: 1px solid rgb(221,221,221);
 }
 
+.container ul.menu
+{
+	float: left;
+}
+
 .fixedpos
 {
 	position: fixed;
